minor fixes to slides

--- a/_includes/schedule/02.markdown
+++ b/_includes/schedule/02.markdown
@@ -3,9 +3,10 @@
 * [About Class #2](slides/02/meta.html)
 {% endcomment %}
 
-* [Functions Some More!](slides/02/functions-addendum.html)
-* [Objects](slides/02/objects.html)
-* [Strings, Arrays, Mutability and Variable Parameters](slides/02/strings-arrays.html)
+* [Objects](slides/js/js-objects.html)
+* [Functions Some More!](slides/js/js-functions-addendum.html)
+* [Strings, Arrays, Mutability and Variable Parameters](slides/js/js-strings-arrays.html)
+* [Node, NPM, and git](slides/js/js-node-npm-debug-git.html)
 
 {% comment %}
 * [Review](slides/02/review.html) (and [a more in depth review on basics if you want it](slides/02/review-basics.html))
@@ -44,6 +45,8 @@ For a more gentle introduction to functions in JavaScript, check out [{{ site.bo
 </td>
 	<td markdown="block">
 
+
+Quizzes to be posted
 
 {% comment %}
 Due Thursday, 9/15, by 11pm
