--- a/homework/00.markdown
+++ b/homework/00.markdown
@@ -12,7 +12,10 @@ title: CSCI-UA.0480 - Homework #0
 Do this so I can assign you _real_ homework next class!
 
 * [Fill out this form to submit your GitHub username]({{ site.survey_intro }}) (which you should have already done in class)
-* [Please install Node.js, K THX.](../slides/01/intro.html#/24)
+* Please install Node.js:
+    * [via package manager](https://nodejs.org/en/download/package-manager/)
+    * [or by download](https://nodejs.org/en/download/)
+
 </div>
 
 </div>
