--- a/_includes/schedule/03.markdown
+++ b/_includes/schedule/03.markdown
@@ -1,28 +1,9 @@
 	<td markdown="block">
-* [Node, NPM, and git](slides/03/node-npm-debug-git.html)
-    * process.argv
-    * JSON.parse
+* [Objects](slides/js/js-objects.html)
+* [Functions Some More!](slides/js/js-functions-addendum.html)
+* [Strings, Arrays, Mutability and Variable Parameters](slides/js/js-strings-arrays.html)
+* [Node, NPM, and git](slides/js/js-node-npm-debug-git.html)
 * [Higher Order Functions](slides/03/higher-order-functions.html) 
-* [Console.log](slides/03/questions-log.html)
-* for homework
-    * file i/o
-    * readline sync
-    * modules
-    * homework demo
-
-{% comment %}
-	* spread operator
-    * default args using rest operator
-    * node-sh
-    * objects
-    * objects with methods
-    * objects with shorthand
-    * destructuring
-    * rest
-    * spread
-    * slice vs ...arr
-    * concat vs ...arr
-{% endcomment %}
 
 {% comment %}
 * [Node, NPM, and git](slides/02/node-npm-debug-git.html)
@@ -53,6 +34,10 @@
 
 </td>
 	<td markdown="block">
+
+__Due Wednesday, 9/20, by 11pm__
+
+* [Homework #1](homework/01.html) 
 
 
 {% comment %}
