--- a/homework/01.markdown
+++ b/homework/01.markdown
@@ -9,7 +9,7 @@ title: CSCI-UA.0480 - Homework #1
 
 # Reversi / Othello
 
-## Due __Sep 20th, by 11PM__
+## Due <strike>Sep 20th, by 11PM</strike> __Sep 21st, by 11PM__
 
 <pre>     A   B   C   D   E   F   G   H
    +---+---+---+---+---+---+---+---+
